@@ -1,4 +1,4 @@
-package com.example.demo.service.impl
+package com.example.demo.service.impl;
 
 import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.exception.ValidationException;
@@ -8,6 +8,7 @@ import com.example.demo.model.VendorDocument;
 import com.example.demo.repository.DocumentTypeRepository;
 import com.example.demo.repository.VendorDocumentRepository;
 import com.example.demo.repository.VendorRepository;
+import com.example.demo.service.VendorDocumentService;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
@@ -33,13 +34,25 @@ public class VendorDocumentServiceImpl implements VendorDocumentService {
     @Override
     public VendorDocument uploadDocument(Long vendorId, Long typeId, VendorDocument document) {
 
+        if (vendorId == null) {
+            throw new ValidationException("Vendor id cannot be null");
+        }
+
+        if (typeId == null) {
+            throw new ValidationException("Document type id cannot be null");
+        }
+
+        if (document == null) {
+            throw new ValidationException("Document cannot be null");
+        }
+
         Vendor vendor = vendorRepository.findById(vendorId)
                 .orElseThrow(() -> new ResourceNotFoundException("Vendor not found"));
 
         DocumentType type = documentTypeRepository.findById(typeId)
                 .orElseThrow(() -> new ResourceNotFoundException("DocumentType not found"));
 
-        if (document.getFileUrl() == null || document.getFileUrl().isBlank()) {
+        if (document.getFileUrl() == null || document.getFileUrl().trim().isEmpty()) {
             throw new ValidationException("File URL is required");
         }
 
@@ -50,9 +63,11 @@ public class VendorDocumentServiceImpl implements VendorDocumentService {
 
         document.setVendor(vendor);
         document.setDocumentType(type);
+
+        // expiryDate == today is VALID
         document.setIsValid(
                 document.getExpiryDate() == null ||
-                document.getExpiryDate().isAfter(LocalDate.now())
+                !document.getExpiryDate().isBefore(LocalDate.now())
         );
 
         return vendorDocumentRepository.save(document);
@@ -60,6 +75,10 @@ public class VendorDocumentServiceImpl implements VendorDocumentService {
 
     @Override
     public List<VendorDocument> getDocumentsForVendor(Long vendorId) {
+
+        if (vendorId == null) {
+            throw new ValidationException("Vendor id cannot be null");
+        }
 
         Vendor vendor = vendorRepository.findById(vendorId)
                 .orElseThrow(() -> new ResourceNotFoundException("Vendor not found"));
@@ -69,7 +88,13 @@ public class VendorDocumentServiceImpl implements VendorDocumentService {
 
     @Override
     public VendorDocument getDocument(Long id) {
+
+        if (id == null) {
+            throw new ValidationException("Document id cannot be null");
+        }
+
         return vendorDocumentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("VendorDocument not found"));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("VendorDocument not found"));
     }
 }
